implement custom icon bulk deletion
allows to select multiple custom icons and delete them all at once.

- adjust the list view selection behavior such that multiple icons can
  be selected
- process all indexes of the selection when delete button is clicked
- ask for confirmation to delete icons in use, but ask only once
- enable/disable the delete button depending on the current selection

--- a/src/gui/dbsettings/DatabaseSettingsWidgetIcons.ui
+++ b/src/gui/dbsettings/DatabaseSettingsWidgetIcons.ui
@@ -46,6 +46,9 @@
         <property name="editTriggers">
          <set>QAbstractItemView::NoEditTriggers</set>
         </property>
+        <property name="selectionMode">
+         <enum>QAbstractItemView::MultiSelection</enum>
+        </property>
         <property name="movement">
          <enum>QListView::Static</enum>
         </property>
@@ -71,7 +74,7 @@
         <item>
          <widget class="QPushButton" name="deleteButton">
           <property name="text">
-           <string>Delete selected icon</string>
+           <string>Delete selected icon(s)</string>
           </property>
          </widget>
         </item>
